src/objects/INT_Config_Fichero_CIA__c.object
<CustomObject>
    <description>Representa la configuración de cada uno de los ficheros enviados a las Compañías Aseguradoras.</description>
    <fields>
        <fullName>FIC_FOR_CompaniaId__c</fullName>
        <formula>FIC_LKP_Compania__r.CUE_TXT_Identificador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIC_LKP_Compania__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Compañía</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Compañía</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integraciones: Configuración Fichero CIA</relationshipLabel>
        <relationshipName>Integraciones_Configuraci_n_Fichero_CIA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIC_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIC_TXT_Query__c</fullName>
        <label>Sentencia Query</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integraciones: Configuración Fichero CIA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FIC_LKP_Compania__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Configuración Fichero CIA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>